ajuste no rodapé

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <footer class="rodape-gtaV">
             <p>
-                Produzido por William Ramos no Curso Dev em Dobro - Projeto GTA V &copy; 2024. <img src="./src/img/logo-rockstar.svg" alt="logo Rockstar"> 
+                Produzido por Bianca Silveria Paiva no Curso Dev em Dobro - Projeto GTA V &copy; 2024. <img src="./src/img/logo-rockstar.svg" alt="logo Rockstar"> 
             </p>
         </footer>
 
